--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
   "name": "nexusflow",
-  "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "check-deps": "tsx scripts/check-dependencies.ts"
   },
   "dependencies": {
-    "react-dom": "^19.2.0",
-    "@google/genai": "^1.30.0",
-    "react": "^19.2.0",
-    "lucide-react": "^0.554.0",
-    "recharts": "^3.4.1"
+    "@google/genai": "^0.2.0",
+    "lucide-react": "^0.344.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "recharts": "^2.12.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
-  }
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "tsx": "^4.20.6",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.4"
+  },
+  "description": "NexusFlow is a local-first, terminal-style interface that orchestrates a team of specialized AI agents to build software. It mimics a professional development environment with role-based agents (Architect, Coder, QA, Security), a virtual file system, and integrated telemetry.",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
